crates/fig-lexer/tests/snapshots/integration_tests__functions__calling_functions.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: double
- LParen
- Ident: x
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Indent
- Return
- Ident: x
- Star
- IntegerLiteral:
    base: Decimal
    digits: "2"
    suffix: ~
- Newline
- Dedent
- Func
- Ident: quadruple
- LParen
- Ident: x
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Indent
- Return
- Ident: double
- LParen
- Ident: double
- LParen
- Ident: x
- RParen
- RParen
- Newline
- Dedent
- Func
- Ident: apply_twice
- LParen
- Ident: x
- Colon
- I32
- RParen
- Arrow
- I32
- Newline
- Indent
- Let
- Ident: a
- Eq
- Ident: double
- LParen
- Ident: x
- RParen
- Newline
- Return
- Ident: double
- LParen
- Ident: a
- RParen
- Newline
- Dedent
