crates/fig-lexer/tests/snapshots/integration_tests__functions__mut_self.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Struct
- Ident: Node
- Newline
- Indent
- Ident: data
- Colon
- I32
- Newline
- Dedent
- Func
- Ident: Node
- ColonColon
- Ident: consume
- LParen
- Mut
- SelfLower
- RParen
- Arrow
- I32
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: Node
- ColonColon
- Ident: transform
- LParen
- Mut
- SelfLower
- RParen
- Arrow
- Ident: Node
- Newline
- Indent
- Pass
- Newline
- Dedent
